# imagine_food

./: .gitignore  README.md  database_manager.py  pyproject.toml  trainer.ipynb
.github/workflows/: deploy.yml  report.yml
datasets/: allergen30.yaml
imagine-web/: package.json
imagine-web/public/: index.html
imagine-web/src/: App.css  App.tsx  convert.ts  index.css  support.ts
report/: bibliography.bib  report.tex
sources/: datasets.py  logs.py
