[tool.poetry]
name = "imagine-food"
version = "0.0.1"
description = "Course COMP4471 final project"
authors = [
    "Aleksandr Sergeev <asergeev@connect.ust.hk>",
    "...",
]


[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.1.1"
ultralytics = "^8.3.28"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchsummary = "^1.5.1"
tqdm = "^4.67.0"
